--- a/src/pages/blog/2019-12-16-testing.md
+++ b/src/pages/blog/2019-12-16-testing.md
@@ -2,7 +2,8 @@
 templateKey: blog-post
 title: Testing
 date: 2019-12-16T09:24:57.210Z
-description: Testing purpose
+description: Testing purpose123
+author: achyuth
 featuredpost: false
 featuredimage: /img/products-grid3.jpg
 tags:
